--- a/TODO
+++ b/TODO
@@ -1,1 +1,11 @@
-Make game
+1. Create start menu
+
+2. Create basic map
+  -platforms
+  -background
+ 
+3. Create player
+  -...
+
+4. Multiplayer
+  -...
